# anyllm

./: .env.example  .gitignore  README.md  pyproject.toml
.anyllm/: config.yaml
docs/: architechure.md
landing/: index.html  styles.css
src/anyllm/: cli.py  config.py  graph_bridge.py  graph_context.py  merger.py  storage.py
src/anyllm/distiller/: distiller.py
src/anyllm/ingestors/: claude_code.py
